--- a/to-do-list-backend/package.json
+++ b/to-do-list-backend/package.json
@@ -21,6 +21,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "nodemon": "^3.1.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
   }
 }
