--- a/to-do-list-backend/package.json
+++ b/to-do-list-backend/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf dist",
